--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
      
   <div class="container home">
     <header class="intro">
-      <img src="img/fun-bus.jpg" alt="bus in the sand">
+      <img class="fun" src="img/fun-bus.jpg" alt="bus in the sand">
       <h2 class="welcome">Welcome To Fun Bus!</h2>
       <p class="travel">Traveling expedition modern, clean webdesign blogger clean website theme website modern. Design pretty design, travelblogger adventure WordPress wanderlust theme blogger website expedition theme travelblogger. Adventure fun traveler pretty design website expedition.</p>
     </header>
